# broaudio

./: .gitmodules  CMakeLists.txt  README.md
include/broaudio/: atomic_shared_ptr.h  engine.h  log.h  types.h
include/broaudio/clip/: clip.h
include/broaudio/core/: ring_buffer.h
include/broaudio/dsp/: biquad.h  chorus.h  compressor.h  delay.h  distortion.h  equalizer.h  fft.h  limiter.h  params.h  resampler.h  reverb.h  smoother.h
include/broaudio/io/: audio_file.h  serialization.h
include/broaudio/midi/: midi_input.h
include/broaudio/mix/: bus.h
include/broaudio/sequencer/: automation.h  sequence.h
include/broaudio/spatial/: listener.h  source.h
include/broaudio/synth/: modulation.h  oscillator.h  voice.h  voice_allocator.h  wavetable.h
src/: engine.cpp  log.cpp
src/clip/: clip.cpp
src/core/: ring_buffer.cpp
src/dsp/: biquad.cpp  chorus.cpp  compressor.cpp  delay.cpp  distortion.cpp  equalizer.cpp  fft.cpp  limiter.cpp  resampler.cpp  reverb.cpp
src/io/: audio_file.cpp  serialization.cpp
src/midi/: midi_input.cpp
src/sequencer/: automation.cpp  sequence.cpp
src/synth/: modulation.cpp  oscillator.cpp  voice.cpp  voice_allocator.cpp  wavetable.cpp
tests/: CMakeLists.txt  test_audio_file.cpp  test_automation.cpp  test_biquad.cpp  test_bus_eq.cpp  test_bus_metering.cpp  test_chorus.cpp  test_compressor.cpp  test_delay.cpp  test_distortion.cpp  test_effect_order.cpp  test_fft.cpp  test_harness.h  test_limiter.cpp  test_modulation.cpp  test_oscillator.cpp  test_resampler.cpp  test_reverb.cpp  test_ring_buffer.cpp  test_scheduled_events.cpp  test_sequence.cpp  test_serialization.cpp  test_sidechain.cpp  test_signal_chain.cpp  test_smoothing.cpp  test_spatial.cpp  test_unison.cpp  test_voice_allocator.cpp  test_wavetable.cpp
